--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -40,11 +40,24 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# # read csv file with the built-in function\n",
-    "# df_csv = pd.read_csv('pokemon_data.csv')\n",
+    "# read csv file with the built-in function\n",
+    "df = pd.read_csv('pokemon_data.csv')\n",
     "\n",
+    "# print the top 3 rows of the data\n",
+    "print(df.head(3))\n",
+    "\n",
+    "# print the bottom 3 rows of the data\n",
+    "print(df.tail(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# read excel file with the built-in function\n",
-    "df_csv = pd.read_csv('pokemon_data.xlsx')\n",
+    "df = pd.read_excel('pokemon_data.xlsx')\n",
     "\n",
     "# print the top 3 rows of the data\n",
     "print(df.head(3))\n",
