--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -52,12 +52,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   #       Name Type 1  Type 2  HP  Attack  Defense  Sp. Atk  Sp. Def  Speed  \\\n",
+      "0  1  Bulbasaur  Grass  Poison  45      49       49       65       65     45   \n",
+      "1  2    Ivysaur  Grass  Poison  60      62       63       80       80     60   \n",
+      "2  3   Venusaur  Grass  Poison  80      82       83      100      100     80   \n",
+      "\n",
+      "   Generation  Legendary  \n",
+      "0           1      False  \n",
+      "1           1      False  \n",
+      "2           1      False  \n",
+      "       #                 Name   Type 1 Type 2  HP  Attack  Defense  Sp. Atk  \\\n",
+      "797  720  HoopaHoopa Confined  Psychic  Ghost  80     110       60      150   \n",
+      "798  720   HoopaHoopa Unbound  Psychic   Dark  80     160       60      170   \n",
+      "799  721            Volcanion     Fire  Water  80     110      120      130   \n",
+      "\n",
+      "     Sp. Def  Speed  Generation  Legendary  \n",
+      "797      130     70           6       True  \n",
+      "798      130     80           6       True  \n",
+      "799       90     70           6       True  \n"
+     ]
+    }
+   ],
    "source": [
     "# read excel file with the built-in function\n",
     "df = pd.read_excel('pokemon_data.xlsx')\n",
+    "\n",
+    "# print the top 3 rows of the data\n",
+    "print(df.head(3))\n",
+    "\n",
+    "# print the bottom 3 rows of the data\n",
+    "print(df.tail(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   #       Name Type 1  Type 2  HP  Attack  Defense  Sp. Atk  Sp. Def  Speed  \\\n",
+      "0  1  Bulbasaur  Grass  Poison  45      49       49       65       65     45   \n",
+      "1  2    Ivysaur  Grass  Poison  60      62       63       80       80     60   \n",
+      "2  3   Venusaur  Grass  Poison  80      82       83      100      100     80   \n",
+      "\n",
+      "   Generation  Legendary  \n",
+      "0           1      False  \n",
+      "1           1      False  \n",
+      "2           1      False  \n",
+      "       #                 Name   Type 1 Type 2  HP  Attack  Defense  Sp. Atk  \\\n",
+      "797  720  HoopaHoopa Confined  Psychic  Ghost  80     110       60      150   \n",
+      "798  720   HoopaHoopa Unbound  Psychic   Dark  80     160       60      170   \n",
+      "799  721            Volcanion     Fire  Water  80     110      120      130   \n",
+      "\n",
+      "     Sp. Def  Speed  Generation  Legendary  \n",
+      "797      130     70           6       True  \n",
+      "798      130     80           6       True  \n",
+      "799       90     70           6       True  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# read text file with the built-in function\n",
+    "df = pd.read_csv('pokemon_data.txt', delimiter='\\t')\n",
     "\n",
     "# print the top 3 rows of the data\n",
     "print(df.head(3))\n",
