--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Loading data into Pandas"
+    "1) Loading Data in Pandas"
    ]
   },
   {
@@ -132,6 +132,13 @@
     "\n",
     "# print the bottom 3 rows of the data\n",
     "print(df.tail(3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2) Reading Data in Pandas"
    ]
   }
  ],
