--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -40,13 +40,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# read csv file with the built-in function\n",
+    "## Read csv file with the built-in function\n",
     "df = pd.read_csv('pokemon_data.csv')\n",
     "\n",
-    "# print the top 3 rows of the data\n",
+    "## Print the top 3 rows of the data\n",
     "print(df.head(3))\n",
     "\n",
-    "# print the bottom 3 rows of the data\n",
+    "## Print the bottom 3 rows of the data\n",
     "print(df.tail(3))"
    ]
   },
@@ -81,13 +81,13 @@
     }
    ],
    "source": [
-    "# read excel file with the built-in function\n",
+    "## Read excel file with the built-in function\n",
     "df = pd.read_excel('pokemon_data.xlsx')\n",
     "\n",
-    "# print the top 3 rows of the data\n",
+    "## Print the top 3 rows of the data\n",
     "print(df.head(3))\n",
     "\n",
-    "# print the bottom 3 rows of the data\n",
+    "## Print the bottom 3 rows of the data\n",
     "print(df.tail(3))"
    ]
   },
@@ -124,13 +124,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# read text file with the built-in function\n",
+    "## Read text file with the built-in function\n",
     "df = pd.read_csv('pokemon_data.txt', delimiter='\\t')\n",
     "\n",
-    "# print the top 3 rows of the data\n",
+    "## Print the top 3 rows of the data\n",
     "print(df.head(3))\n",
     "\n",
-    "# print the bottom 3 rows of the data\n",
+    "## Print the bottom 3 rows of the data\n",
     "print(df.tail(3))"
    ]
   },
@@ -139,6 +139,59 @@
    "metadata": {},
    "source": [
     "2) Reading Data in Pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['#', 'Name', 'Type 1', 'Type 2', 'HP', 'Attack', 'Defense', 'Sp. Atk',\n",
+      "       'Sp. Def', 'Speed', 'Generation', 'Legendary'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Read headers\n",
+    "\n",
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                Bulbasaur\n",
+      "1                  Ivysaur\n",
+      "2                 Venusaur\n",
+      "3    VenusaurMega Venusaur\n",
+      "4               Charmander\n",
+      "Name: Name, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Read each column\n",
+    "print (df['Name'][0:5]) # printing the top 5 rows of the column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Read each row"
    ]
   }
  ],
