--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -182,7 +182,9 @@
    ],
    "source": [
     "## Read each column\n",
-    "print (df['Name'][0:5]) # printing the top 5 rows of the column"
+    "\n",
+    "# printing the top 5 rows of the column\n",
+    "print (df['Name'][0:5]) \n"
    ]
   },
   {
