--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -40,13 +40,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "## Read csv file with the built-in function\n",
+    "## read csv file with the built-in function\n",
     "df = pd.read_csv('pokemon_data.csv')\n",
     "\n",
-    "## Print the top 3 rows of the data\n",
+    "## print the top 3 rows of the data\n",
     "print(df.head(3))\n",
     "\n",
-    "## Print the bottom 3 rows of the data\n",
+    "## print the bottom 3 rows of the data\n",
     "print(df.tail(3))"
    ]
   },
@@ -81,13 +81,13 @@
     }
    ],
    "source": [
-    "## Read excel file with the built-in function\n",
+    "## read excel file with the built-in function\n",
     "df = pd.read_excel('pokemon_data.xlsx')\n",
     "\n",
-    "## Print the top 3 rows of the data\n",
+    "## print the top 3 rows of the data\n",
     "print(df.head(3))\n",
     "\n",
-    "## Print the bottom 3 rows of the data\n",
+    "## print the bottom 3 rows of the data\n",
     "print(df.tail(3))"
    ]
   },
@@ -124,13 +124,13 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "## Read text file with the built-in function\n",
+    "## read text file with the built-in function\n",
     "df = pd.read_csv('pokemon_data.txt', delimiter='\\t')\n",
     "\n",
-    "## Print the top 3 rows of the data\n",
+    "## print the top 3 rows of the data\n",
     "print(df.head(3))\n",
     "\n",
-    "## Print the bottom 3 rows of the data\n",
+    "## print the bottom 3 rows of the data\n",
     "print(df.tail(3))"
    ]
   },
@@ -157,14 +157,14 @@
     }
    ],
    "source": [
-    "## Read headers\n",
+    "## read headers\n",
     "\n",
     "print(df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -176,24 +176,61 @@
       "2                 Venusaur\n",
       "3    VenusaurMega Venusaur\n",
       "4               Charmander\n",
-      "Name: Name, dtype: object\n"
+      "Name: Name, dtype: object\n",
+      "                      Name   Type 1  Attack\n",
+      "0                Bulbasaur    Grass      49\n",
+      "1                  Ivysaur    Grass      62\n",
+      "2                 Venusaur    Grass      82\n",
+      "3    VenusaurMega Venusaur    Grass     100\n",
+      "4               Charmander     Fire      52\n",
+      "..                     ...      ...     ...\n",
+      "795                Diancie     Rock     100\n",
+      "796    DiancieMega Diancie     Rock     160\n",
+      "797    HoopaHoopa Confined  Psychic     110\n",
+      "798     HoopaHoopa Unbound  Psychic     160\n",
+      "799              Volcanion     Fire     110\n",
+      "\n",
+      "[800 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "## Read each column\n",
+    "## read each column\n",
     "\n",
-    "# printing the top 5 rows of the column\n",
-    "print (df['Name'][0:5]) \n"
+    "## print the top 5 rows of the column\n",
+    "print(df['Name'][0:5]) \n",
+    "\n",
+    "## print multiple columns\n",
+    "print(df[['Name', 'Type 1', 'Attack']])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   #                   Name Type 1  Type 2  HP  Attack  Defense  Sp. Atk  \\\n",
+      "0  1              Bulbasaur  Grass  Poison  45      49       49       65   \n",
+      "1  2                Ivysaur  Grass  Poison  60      62       63       80   \n",
+      "2  3               Venusaur  Grass  Poison  80      82       83      100   \n",
+      "3  3  VenusaurMega Venusaur  Grass  Poison  80     100      123      122   \n",
+      "\n",
+      "   Sp. Def  Speed  Generation  Legendary  \n",
+      "0       65     45           1      False  \n",
+      "1       80     60           1      False  \n",
+      "2      100     80           1      False  \n",
+      "3      120     80           1      False  \n"
+     ]
+    }
+   ],
    "source": [
-    "## Read each row"
+    "## read each row\n",
+    "## reading the first 4 rows\n",
+    "print(df.head(4))"
    ]
   }
  ],
