--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -223,14 +223,31 @@
       "0       65     45           1      False  \n",
       "1       80     60           1      False  \n",
       "2      100     80           1      False  \n",
-      "3      120     80           1      False  \n"
+      "3      120     80           1      False  \n",
+      "#                   2\n",
+      "Name          Ivysaur\n",
+      "Type 1          Grass\n",
+      "Type 2         Poison\n",
+      "HP                 60\n",
+      "Attack             62\n",
+      "Defense            63\n",
+      "Sp. Atk            80\n",
+      "Sp. Def            80\n",
+      "Speed              60\n",
+      "Generation          1\n",
+      "Legendary       False\n",
+      "Name: 1, dtype: object\n"
      ]
     }
    ],
    "source": [
     "## read each row\n",
-    "## reading the first 4 rows\n",
-    "print(df.head(4))"
+    "\n",
+    "## print the first 4 rows\n",
+    "print(df.head(4))\n",
+    "\n",
+    "## print the details of integer location \n",
+    "print(df.iloc[1])\n"
    ]
   }
  ],
