--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -12467,6 +12467,175 @@
     "\n",
     "df.loc[df['Type 1'] == \"Fire\"]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Sorting/Describing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.000000</td>\n",
+       "      <td>800.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>362.813750</td>\n",
+       "      <td>69.258750</td>\n",
+       "      <td>79.001250</td>\n",
+       "      <td>73.842500</td>\n",
+       "      <td>72.820000</td>\n",
+       "      <td>71.902500</td>\n",
+       "      <td>68.277500</td>\n",
+       "      <td>3.32375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>208.343798</td>\n",
+       "      <td>25.534669</td>\n",
+       "      <td>32.457366</td>\n",
+       "      <td>31.183501</td>\n",
+       "      <td>32.722294</td>\n",
+       "      <td>27.828916</td>\n",
+       "      <td>29.060474</td>\n",
+       "      <td>1.66129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>1.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>184.750000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>55.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>49.750000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>45.000000</td>\n",
+       "      <td>2.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>364.500000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>70.000000</td>\n",
+       "      <td>65.000000</td>\n",
+       "      <td>3.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>539.250000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>5.00000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>721.000000</td>\n",
+       "      <td>255.000000</td>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>194.000000</td>\n",
+       "      <td>230.000000</td>\n",
+       "      <td>180.000000</td>\n",
+       "      <td>6.00000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                #          HP      Attack     Defense     Sp. Atk     Sp. Def  \\\n",
+       "count  800.000000  800.000000  800.000000  800.000000  800.000000  800.000000   \n",
+       "mean   362.813750   69.258750   79.001250   73.842500   72.820000   71.902500   \n",
+       "std    208.343798   25.534669   32.457366   31.183501   32.722294   27.828916   \n",
+       "min      1.000000    1.000000    5.000000    5.000000   10.000000   20.000000   \n",
+       "25%    184.750000   50.000000   55.000000   50.000000   49.750000   50.000000   \n",
+       "50%    364.500000   65.000000   75.000000   70.000000   65.000000   70.000000   \n",
+       "75%    539.250000   80.000000  100.000000   90.000000   95.000000   90.000000   \n",
+       "max    721.000000  255.000000  190.000000  230.000000  194.000000  230.000000   \n",
+       "\n",
+       "            Speed  Generation  \n",
+       "count  800.000000   800.00000  \n",
+       "mean    68.277500     3.32375  \n",
+       "std     29.060474     1.66129  \n",
+       "min      5.000000     1.00000  \n",
+       "25%     45.000000     2.00000  \n",
+       "50%     65.000000     3.00000  \n",
+       "75%     90.000000     5.00000  \n",
+       "max    180.000000     6.00000  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## read the statistical description\n",
+    "\n",
+    "df.describe()"
+   ]
   }
  ],
  "metadata": {
