--- a/pandas_essentials.ipynb
+++ b/pandas_essentials.ipynb
@@ -12636,6 +12636,510 @@
     "\n",
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>460</td>\n",
+       "      <td>Abomasnow</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>90</td>\n",
+       "      <td>92</td>\n",
+       "      <td>75</td>\n",
+       "      <td>92</td>\n",
+       "      <td>85</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511</th>\n",
+       "      <td>460</td>\n",
+       "      <td>AbomasnowMega Abomasnow</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>90</td>\n",
+       "      <td>132</td>\n",
+       "      <td>105</td>\n",
+       "      <td>132</td>\n",
+       "      <td>105</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>63</td>\n",
+       "      <td>Abra</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>15</td>\n",
+       "      <td>105</td>\n",
+       "      <td>55</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>359</td>\n",
+       "      <td>Absol</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65</td>\n",
+       "      <td>130</td>\n",
+       "      <td>60</td>\n",
+       "      <td>75</td>\n",
+       "      <td>60</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>359</td>\n",
+       "      <td>AbsolMega Absol</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65</td>\n",
+       "      <td>150</td>\n",
+       "      <td>60</td>\n",
+       "      <td>115</td>\n",
+       "      <td>60</td>\n",
+       "      <td>115</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>632</th>\n",
+       "      <td>571</td>\n",
+       "      <td>Zoroark</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60</td>\n",
+       "      <td>105</td>\n",
+       "      <td>60</td>\n",
+       "      <td>120</td>\n",
+       "      <td>60</td>\n",
+       "      <td>105</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>631</th>\n",
+       "      <td>570</td>\n",
+       "      <td>Zorua</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40</td>\n",
+       "      <td>65</td>\n",
+       "      <td>40</td>\n",
+       "      <td>80</td>\n",
+       "      <td>40</td>\n",
+       "      <td>65</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Zubat</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>40</td>\n",
+       "      <td>45</td>\n",
+       "      <td>35</td>\n",
+       "      <td>30</td>\n",
+       "      <td>40</td>\n",
+       "      <td>55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695</th>\n",
+       "      <td>634</td>\n",
+       "      <td>Zweilous</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>72</td>\n",
+       "      <td>85</td>\n",
+       "      <td>70</td>\n",
+       "      <td>65</td>\n",
+       "      <td>70</td>\n",
+       "      <td>58</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>794</th>\n",
+       "      <td>718</td>\n",
+       "      <td>Zygarde50% Forme</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>Ground</td>\n",
+       "      <td>108</td>\n",
+       "      <td>100</td>\n",
+       "      <td>121</td>\n",
+       "      <td>81</td>\n",
+       "      <td>95</td>\n",
+       "      <td>95</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>800 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #                     Name   Type 1  Type 2   HP  Attack  Defense  \\\n",
+       "510  460                Abomasnow    Grass     Ice   90      92       75   \n",
+       "511  460  AbomasnowMega Abomasnow    Grass     Ice   90     132      105   \n",
+       "68    63                     Abra  Psychic     NaN   25      20       15   \n",
+       "392  359                    Absol     Dark     NaN   65     130       60   \n",
+       "393  359          AbsolMega Absol     Dark     NaN   65     150       60   \n",
+       "..   ...                      ...      ...     ...  ...     ...      ...   \n",
+       "632  571                  Zoroark     Dark     NaN   60     105       60   \n",
+       "631  570                    Zorua     Dark     NaN   40      65       40   \n",
+       "46    41                    Zubat   Poison  Flying   40      45       35   \n",
+       "695  634                 Zweilous     Dark  Dragon   72      85       70   \n",
+       "794  718         Zygarde50% Forme   Dragon  Ground  108     100      121   \n",
+       "\n",
+       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "510       92       85     60           4      False  \n",
+       "511      132      105     30           4      False  \n",
+       "68       105       55     90           1      False  \n",
+       "392       75       60     75           3      False  \n",
+       "393      115       60    115           3      False  \n",
+       "..       ...      ...    ...         ...        ...  \n",
+       "632      120       60    105           5      False  \n",
+       "631       80       40     65           5      False  \n",
+       "46        30       40     55           1      False  \n",
+       "695       65       70     58           5      False  \n",
+       "794       81       95     95           6       True  \n",
+       "\n",
+       "[800 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## sort the values alphabetically in ascending order\n",
+    "\n",
+    "df.sort_values('Name') # by default in ascending order\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>#</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Atk</th>\n",
+       "      <th>Sp. Def</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>794</th>\n",
+       "      <td>718</td>\n",
+       "      <td>Zygarde50% Forme</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>Ground</td>\n",
+       "      <td>108</td>\n",
+       "      <td>100</td>\n",
+       "      <td>121</td>\n",
+       "      <td>81</td>\n",
+       "      <td>95</td>\n",
+       "      <td>95</td>\n",
+       "      <td>6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695</th>\n",
+       "      <td>634</td>\n",
+       "      <td>Zweilous</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>Dragon</td>\n",
+       "      <td>72</td>\n",
+       "      <td>85</td>\n",
+       "      <td>70</td>\n",
+       "      <td>65</td>\n",
+       "      <td>70</td>\n",
+       "      <td>58</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Zubat</td>\n",
+       "      <td>Poison</td>\n",
+       "      <td>Flying</td>\n",
+       "      <td>40</td>\n",
+       "      <td>45</td>\n",
+       "      <td>35</td>\n",
+       "      <td>30</td>\n",
+       "      <td>40</td>\n",
+       "      <td>55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>631</th>\n",
+       "      <td>570</td>\n",
+       "      <td>Zorua</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>40</td>\n",
+       "      <td>65</td>\n",
+       "      <td>40</td>\n",
+       "      <td>80</td>\n",
+       "      <td>40</td>\n",
+       "      <td>65</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>632</th>\n",
+       "      <td>571</td>\n",
+       "      <td>Zoroark</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>60</td>\n",
+       "      <td>105</td>\n",
+       "      <td>60</td>\n",
+       "      <td>120</td>\n",
+       "      <td>60</td>\n",
+       "      <td>105</td>\n",
+       "      <td>5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>393</th>\n",
+       "      <td>359</td>\n",
+       "      <td>AbsolMega Absol</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65</td>\n",
+       "      <td>150</td>\n",
+       "      <td>60</td>\n",
+       "      <td>115</td>\n",
+       "      <td>60</td>\n",
+       "      <td>115</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>392</th>\n",
+       "      <td>359</td>\n",
+       "      <td>Absol</td>\n",
+       "      <td>Dark</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>65</td>\n",
+       "      <td>130</td>\n",
+       "      <td>60</td>\n",
+       "      <td>75</td>\n",
+       "      <td>60</td>\n",
+       "      <td>75</td>\n",
+       "      <td>3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>63</td>\n",
+       "      <td>Abra</td>\n",
+       "      <td>Psychic</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>25</td>\n",
+       "      <td>20</td>\n",
+       "      <td>15</td>\n",
+       "      <td>105</td>\n",
+       "      <td>55</td>\n",
+       "      <td>90</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>511</th>\n",
+       "      <td>460</td>\n",
+       "      <td>AbomasnowMega Abomasnow</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>90</td>\n",
+       "      <td>132</td>\n",
+       "      <td>105</td>\n",
+       "      <td>132</td>\n",
+       "      <td>105</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>510</th>\n",
+       "      <td>460</td>\n",
+       "      <td>Abomasnow</td>\n",
+       "      <td>Grass</td>\n",
+       "      <td>Ice</td>\n",
+       "      <td>90</td>\n",
+       "      <td>92</td>\n",
+       "      <td>75</td>\n",
+       "      <td>92</td>\n",
+       "      <td>85</td>\n",
+       "      <td>60</td>\n",
+       "      <td>4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>800 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       #                     Name   Type 1  Type 2   HP  Attack  Defense  \\\n",
+       "794  718         Zygarde50% Forme   Dragon  Ground  108     100      121   \n",
+       "695  634                 Zweilous     Dark  Dragon   72      85       70   \n",
+       "46    41                    Zubat   Poison  Flying   40      45       35   \n",
+       "631  570                    Zorua     Dark     NaN   40      65       40   \n",
+       "632  571                  Zoroark     Dark     NaN   60     105       60   \n",
+       "..   ...                      ...      ...     ...  ...     ...      ...   \n",
+       "393  359          AbsolMega Absol     Dark     NaN   65     150       60   \n",
+       "392  359                    Absol     Dark     NaN   65     130       60   \n",
+       "68    63                     Abra  Psychic     NaN   25      20       15   \n",
+       "511  460  AbomasnowMega Abomasnow    Grass     Ice   90     132      105   \n",
+       "510  460                Abomasnow    Grass     Ice   90      92       75   \n",
+       "\n",
+       "     Sp. Atk  Sp. Def  Speed  Generation  Legendary  \n",
+       "794       81       95     95           6       True  \n",
+       "695       65       70     58           5      False  \n",
+       "46        30       40     55           1      False  \n",
+       "631       80       40     65           5      False  \n",
+       "632      120       60    105           5      False  \n",
+       "..       ...      ...    ...         ...        ...  \n",
+       "393      115       60    115           3      False  \n",
+       "392       75       60     75           3      False  \n",
+       "68       105       55     90           1      False  \n",
+       "511      132      105     30           4      False  \n",
+       "510       92       85     60           4      False  \n",
+       "\n",
+       "[800 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## sort the values alphabetically in descending order\n",
+    "\n",
+    "df.sort_values('Name', ascending=False)"
+   ]
   }
  ],
  "metadata": {
